crates/compiler/src/tests/e2e/good/0288_trait_cloneable_impl/main.gom
trait Cloneable {
    fn clone(Self) -> Self;
}

struct Num { value: int32 }

impl Cloneable for Num {
    fn clone(self: Num) -> Num {
        Num { value: self.value }
    }
}

fn main() {
    let n = Num { value: 42 };
    let n2 = Cloneable::clone(n);
    println(n2.value.to_string());
}
